petit modification de MOT

--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 Parse:
-<html><body><h1>this is a test file for links </h1><br/><p>this should not be a links </p><br/><p>( this should also not be a link ) </p><br/><p><a href="www.thisisalink.com">this is a a link</a> </p></body></html>
+<html><body><h1>Exemple de fichier SimpleText</h1><p>N ’ oubliez pas : dans un fichier SimpleText , les retours à la ligne sont ignor é s ! Pour faire un nouveau paragraphe , il faut faire un <i>saut</i> de ligne . Pour mettre en forme le texte , on peut utiliser :</p><ul><li>du <i>texte en italique</i> ,</li><li>du <b>texte en gras</b> ,</li><li>et des <a href="https://fr.wikipedia.org/wiki/Hyperlien">liens hypertexte</a> .</li></ul></body></html>
